--- a/res/layout/inventory_fragment.xml
+++ b/res/layout/inventory_fragment.xml
@@ -47,7 +47,7 @@
             android:text="@string/add_ingredient" />
 
         <TextView
-            android:id="@+id/textView1"
+            android:id="@+id/rowRecipeName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
