--- a/res/layout/inventory_fragment.xml
+++ b/res/layout/inventory_fragment.xml
@@ -46,20 +46,12 @@
             android:layout_gravity="right"
             android:text="@string/add_ingredient" />
 
-        <TextView
-            android:id="@+id/rowRecipeName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:text="@string/label_inventory"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textSize="20sp"
-            android:textStyle="bold" />
-
         <ListView
             android:id="@+id/listViewIngredients"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp" >
+
         </ListView>
 
     </LinearLayout>
