--- a/res/layout/inventory_fragment.xml
+++ b/res/layout/inventory_fragment.xml
@@ -40,7 +40,7 @@
         </LinearLayout>
 
         <Button
-            android:id="@+id/btnAdd"
+            android:id="@+id/myImagesGrid"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
