--- a/res/layout/my_images_fragment.xml
+++ b/res/layout/my_images_fragment.xml
@@ -1,8 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical" >
-    
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:layout_gravity="center"
+    android:gravity="center" 
+    android:paddingTop="20dp" 
+    android:paddingBottom="20dp">
+
+    <GridView
+        android:id="@+id/myImagesGrid"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:columnWidth="160dp"
+        android:stretchMode="spacingWidthUniform"
+        android:numColumns="3" 
+        android:horizontalSpacing="20dp"
+        android:verticalSpacing="20dp" >
+    </GridView>
 
 </LinearLayout>
